--- a/res/json/languages/english.json
+++ b/res/json/languages/english.json
@@ -1,5 +1,5 @@
 {
-	"Main_Title" : "NuNuBippy",
+	"Main_Title" : "NuBippy",
 
 	"Private_Key_Screen" : "Private Key",
 	"Private_Key_New_Key_Screen" : "New Private Key",
