--- a/res/json/languages/english.json
+++ b/res/json/languages/english.json
@@ -1,17 +1,26 @@
 {
 	"Main_Title" : "NuBippy",
+	"Action_Title" : "Action",
 
+	"No_Currency_Selected" : "",
+
+	"Home_Screen_Intro_Text" : "NuBippy\nA Toolkit for NuBits and NuShares.\n\nPerform BIP0038 style encryption of private keys.\nGenerate vanity addresses with optional encryption.\n\nTo start, choose an 'Action'.",
+
+	"Home_Screen" : "Home Screen",
 	"Private_Key_Screen" : "Private Key",
 	"Private_Key_New_Key_Screen" : "New Private Key",
+	"Vanity_Screen" : "Vanity Address",
 	"Results_Screen" : "Results",
 	"Popup_Error" : "Error!",
 	"OK" : "OK",
 
 	"Encrypt" : "Encrypt",
 	"Decrypt" : "Decrypt",
+	"Yes" : "Yes",
+	"No" : "No",
 
 	"Bip_Successful" : "BIP0038 encryption was successful.\n\nYour encrypted private key and NuBits and NuShares addresses are below.",
-	"Bip_Decrypt_Successful" : "BIP0038 Decryption was successful.\n\nYour decrypted, WIF format private key and address are below.",
+	"Bip_Decrypt_Successful" : "BIP0038 Decryption was successful.\n\nYour decrypted, WIF format private key and addresses are below.",
 	"Bip_Decrypt_Unsuccessful" : "BIP0038 Decryption was unsuccessful.\n\nPlease try again to ensure you used the correct passphrase.",
 	"Bip_Key_Label" : "BIP0038 encrypted key",
 	"Wif_Key_Label" : "WIF format key",
@@ -34,7 +43,7 @@
 	"Existing_Key" : "Existing Private Key",
 	"Existing_Key_Intro_Text" : "This action will BIP0038 encrypt any existing private key you have.\nIt can also decrypt a BIP0038 encrypted key.\nAcceptable private key formats are:\nBIP0038, Compressed WIF, Uncompressed WIF, HEX, Base64 and Base6.\n\nEnter the private key below to begin.",
 	"New_Key" : "New Private Key",
-	"New_Key_Intro_Text" : "This action will generate a new private key and address for you if you don't already have one.\n\nThe Private key will be BIP0038 encrypted using the passphrase you enter below.\n\nThe passphrase must be a minimum of 7 characters long",
+	"New_Key_Intro_Text" : "This action will generate a new private key and addresses for you.\n\nThe Private key will be BIP0038 encrypted using the passphrase you enter below.\n\nThe passphrase must be a minimum of 7 characters long",
 
 	"Private_Key" : "Private Key",
 	"Compressed_Wif_Key_Entered" : "You entered a Compressed WIF Format private key",
@@ -45,6 +54,39 @@
 	"Wif_Bad_Checksum" : "The checksum doesn't match the WIF key you entered.\n\nPlease try again to ensure that you enter it correctly.",
 	"Bip_Bad_Checksum" : "The checksum doesn't match the BIP0038 encrypted key you entered.\n\nPlease try again to ensure that you enter it correctly.",
 	"Not_Private_Key" : "The text you entered was not recognised as a valid private key.\n\nPlease try again.",
-	"Bip_Key_Entered" : "You entered a BIP0038 encrypted private key.\n\nPlease enter your encryption passphrase below to decrypt the key."
+	"Bip_Key_Entered" : "You entered a BIP0038 encrypted private key.\n\nPlease enter your encryption passphrase below to decrypt the key.",
+
+	"Nubit_Address" : "NuBit Address",
+	"Nubits" : "NuBits",
+	"Nushare_Address" : "NuShare Address",
+	"Nushares" : "NuShares",
+
+	"Vanity_Intro_Text" : "This action will allow you to generate a vanity address for NuBits or NuShares.\n\nPlease make sure you have selected either Nubits or Nushares in the dropdown on the top bar\nand then enter your vanity text in the box below.",
+	"Vanity_Text" : "Vanity Text",
+
+	"System_Info_1" : "To find a ",
+	"System_Info_2" : " address containing the vanity text ",
+	"System_Info_3" : ",\nNuBippy will have to check an average of ",
+	"System_Info_4" : " private keys.",
+	"System_Info_5" : "\n\nYour system is capable of checking roughly ",
+	"System_Info_6" : "\nAt this rate you have a ",
+	"System_Info_7" : "% chance of finding your vanity address within ",
+	"System_Info_8" : ".\n\nDo you want to continue the search?",
+
+	"Display_Vanity_1" : "NuBippy has found the vanity address\n",
+	"Display_Vanity_2" : ".\n\nWould you like to BIP0038 encrypt the private key?",
+
+	"Starting_Search" : "NuBippy is now starting the search for your vanity address.\n\nPlease wait until the search is complete.",
+	"Approximate_Time" : "Approximate time elapsed:\n",
+
+	"Vanity_Passphrase" : "To BIP0038 encrypt your private key, please enter a passphrase below.\n\nYour passphrase must be at least 7 characters long.",
+	"Vanity_Wif_Text" : "Your vanity address and compressed WIF format private key are below.",
+
+	"Abort" : "Abort",
+	"Invalid_Character" : "Your vanity text contains an invalid character.\nYou can't use 'l', 'I','O' or '0'",
+
+	"Warning" : "Warning",
+	"Case_Sensitivity_Warning" : "Your vanity text would make your public address invalid.\nNuBippy will search without honouring upper and lower case instead.",
+	"Regex_Warning" : "Your vanity text would make your public address invalid.\nNuBippy will search using the text as a regular expression instead."
 
 }
